# MyNebula

./: .dockerignore  .env.example  .gitignore  .impeccable.md  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
.cursor/commands/: trellis-check-cross-layer.md  trellis-finish-work.md
.github/workflows/: ci.yml  release.yml
.shared/ui-ux-pro-max/scripts/: core.py  search.py
.trellis/: .template-hashes.json  worktree.yaml
.trellis/spec/: README.md
.trellis/spec/backend/: database-guidelines.md  database-when-added.md  directory-structure.md  error-handling.md  http-api-when-added.md  index.md  logging-guidelines.md  python-package.md
.trellis/spec/big-question/: generated-frontend-assets.md  index.md
.trellis/spec/frontend/: directory-structure.md  index.md  query-and-filtering.md  vite-static-mount.md
.trellis/spec/shared/: code-quality.md  dependencies.md  index.md  project-docs.md  verification.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/workspace/mynebula/: index.md  journal-1.md
.trellis/workspace/opencode/: index.md  journal-1.md
ai_docs/: INDEX.md  START_HERE.md
ai_docs/current/: architecture.md  backend.md  frontend.md  operations.md  release.md  scripts.md
ai_docs/reference/: naming-and-paths.md  project-structure.md  verification.md
ai_docs/standards/: backend.md  design-system.md  documentation.md  engineering.md  frontend.md
alembic/: env.py
alembic/versions/: 20260204_1424_04bee8b1629c_add_star_lists_avatar_tags.py  20260205_2256_35527331a075_initial_schema.py  20260205_2309_9f536c54833a_initial_schema.py  20260208_1600_4b3d8e9a1c2d_add_taxonomy_tables.py  20260223_1730_3bfcdbd93f4d_add_repo_related_caches_table.py  20260303_2100_a1f3b9c8d2e1_add_graph_snapshots_and_pipeline.py  20260304_1900_d4c9e2f7ab10_add_user_graph_cluster_defaults.py  20260408_1240_add_starred_repo_embedding_ann_index.py  20260409_0045_add_related_feedback_unique_constraint.py  20260507_2340_add_admin_login_attempts_table.py
assets/: generate_nebula.py
doc/: DOCKER_DEPLOY.md  ENV_VARS.md  INDEX.md  MODELS_GUIDE.md  PRE_COMMIT_GUIDE.md  QUALITY_GATES.md  REMEDIATION_BACKLOG.md  RESET_GUIDE.md  SDK_USAGE.md  SETTINGS_GUIDE.md
doc/plans/: 2026-02-08-taxonomy-implementation-plan.md
doc/refactor/: baseline.md  feature-flags.md  perf-final.md  performance-report.md  remaining-gaps.md  rollback-runbook.md  stability-final.md
docker/: Dockerfile
examples/: utils_example.py
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: graph-sync-flow.spec.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/__tests__/: App.graph-gating.test.tsx
frontend/src/api/: auth.ts  client.test.ts  client.ts  graph.test.ts  graph.ts  repos.ts  schedule.test.ts  schedule.ts  sync.test.ts  sync.ts
frontend/src/contexts/: AdminAuthContext.test.tsx  AdminAuthContext.tsx  GraphContext.tsx  graphFiltering.test.ts  graphFiltering.ts
frontend/src/hooks/: useCommandPalette.ts  useDataCache.ts  useResizeObserver.ts
frontend/src/lib/: queryKeys.ts
frontend/src/pages/: Dashboard.tsx  DataPage.tsx  GraphPage.tsx  Settings.tsx
frontend/src/stores/: graphStore.test.ts  graphStore.ts
frontend/src/types/: api.ts  graph.ts  index.ts  settings.ts  sync.ts
frontend/src/utils/: clusterAccent.test.ts  clusterAccent.ts  debug.ts  scheduleFormat.test.ts  scheduleFormat.ts  search.test.ts  search.ts
scripts/: rename_package.py  reset_db.py  run_vulture.py  update_version.py
scripts/checks/: no_legacy_page_api_usage.sh
scripts/evals/: build_goldset.py  eval_clusters.py  eval_related.py  run_all_quality_checks.py
scripts/perf/: benchmark_graph_api.py  rollback_drill.py  soak_pipeline.py
src/nebula/: __init__.py  main.py
src/nebula/api/: __init__.py  auth.py  graph.py  repos.py  sync.py
src/nebula/core/: __init__.py  auth.py  clustering.py  config.py  llm.py  (+6 more)
tests/: __init__.py  conftest.py  test_auth_utils.py  test_clustering_improvements.py  test_data_loading.py  test_date_utils.py  test_decorator_utils.py  test_json_utils.py  test_llm_output_language.py  test_main_health.py  test_sync_incremental_assignments.py  test_sync_job_and_graph_edges.py
tests/api/: test_graph_edge_adaptive_threshold.py  test_no_legacy_sync_imports.py  test_readme_ingestion_pipeline.py  test_related_feedback_api.py  test_related_repos_endpoint.py  test_sync_adapter_compat.py  test_v2_auth_access.py  test_v2_dashboard_data_routes.py  test_v2_data_query_filters.py  test_v2_graph_routes.py  test_v2_only_routes.py  test_v2_settings_routes.py  test_v2_sync_pipeline_api.py
tests/core/: test_clustering_adaptive_quality.py  test_database_init_migration.py  test_embedding_text_enrichment.py  test_full_refresh_task_state_propagation.py  test_github_client_star_lists.py  test_graph_query_service_options.py  test_graph_snapshot_builder_service.py  test_incremental_drift_guard.py  test_pipeline_state_machine.py  test_relevance_scoring.py  test_scheduler_service.py  test_snapshot_rollback_service.py  test_sync_execution_support.py  test_tag_normalization.py  test_user_service.py  test_vector_search_query_plan.py
tests/evals/: test_eval_harness_smoke.py  test_goldset_schema.py  test_quality_gate_thresholds.py
(+95 files in other folders)
